# pgvictoria

./: AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  clang-format.sh  pgvictoria.spec
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
contrib/postgresqlconf/: README.md  pg_config_report.py
doc/: ADMIN.md  CLI.md  CMakeLists.txt  CONFIG.md
doc/man/: pgvictoria-admin.1.rst  pgvictoria-cli.1.rst  pgvictoria-config.1.rst
doc/manual/en/: 03-quickstart.md  05-cli-report.md  07-admin-tool.md  20-config-generator.md  97-acknowledgement.md
src/: CMakeLists.txt  admin.c  cli.c  config.c  main.c
src/include/: aes.h  art.h  cmd.h  configuration.h  deque.h  guc.h  html_report.h  json.h  logging.h  markdown.h  memory.h  message.h  network.h  pg14.h  pg15.h  pg16.h  pg17.h  pg18.h  pg19.h  pgvictoria.h  postgresql.h  security.h  shmem.h  stream.h  suggest.h  utf8.h  utils.h  value.h
src/libpgvictoria/: aes.c  art.c  cmd.c  config.c  configuration.c  deque.c  guc.c  html_report.c  json.c  logging.c  markdown.c  memory.c  message.c  network.c  postgresql.c  report.c  security.c  shmem.c  stream.c  suggest.c  utf8.c  utils.c  value.c
test/: CMakeLists.txt  check.sh
test/testcases/: test_guc.c  test_report.c  test_suggest.c  test_utils.c
